src/objects/Loan__c.object
<CustomObject>
    <description>Objects holds all Loan data</description>
    <fields>
        <fullName>Age_in_Commitments__c</fullName>
        <formula>TODAY()-  (Datevalue(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age in Commitments</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Field related the Loan record to the Master Application record</description>
        <inlineHelpText>Application to this Loan</inlineHelpText>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Type__c</fullName>
        <label>Approval Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Commitment Team</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Borrower_Name__c</fullName>
        <formula>Application__r.Primary_Applicant_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Borrower Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Companion__c</fullName>
        <formula>Application__r.Companion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Companion Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Assigned_to_Commitment_Team_Member__c</fullName>
        <label>Date Assigned to Commitment Team Member</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Assigned_to_Queue__c</fullName>
        <label>Date Assigned to Queue</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Commitment_Letter_Generated__c</fullName>
        <label>Date/Time -Commitment Letter Generated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_assigned_to_Case_Manager_Queue__c</fullName>
        <label>Date assigned to Legal Manager Queue</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deadline_Date__c</fullName>
        <inlineHelpText>Default= Date/Time (Commitment Letter Generated ) + 21 days</inlineHelpText>
        <label>Return Deadline Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Disaster_Declaration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates the Loan record to the corresponding Disaster Declaration</description>
        <inlineHelpText>Disaster Declaration related to the Loan record</inlineHelpText>
        <label>Disaster Declaration</label>
        <referenceTo>Disaster__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Drawloop_Next__c</fullName>
        <label>Drawloop Next</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EIDL_Unsecured_Limit__c</fullName>
        <inlineHelpText>Populate with EIDL Unsecure Limit (Number)</inlineHelpText>
        <label>EIDL Unsecured Limit</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ETRAN_Loan_Number__c</fullName>
        <description>ETRAN Loan Number</description>
        <label>ETRAN_Loan_Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiate_Disbursement__c</fullName>
        <label>Initiate Disbursement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <inlineHelpText>Populate with Value in the following format: #.###</inlineHelpText>
        <label>Interest Rate</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issued_Note_Date__c</fullName>
        <inlineHelpText>Populate with Issued Note Date, if it exists</inlineHelpText>
        <label>Issued Note Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <label>Loan Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Modification__c</fullName>
        <description>For Quick Action</description>
        <label>Loan Modification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loan_Type__c</fullName>
        <label>Loan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Logged_in_User__c</fullName>
        <formula>Assigned_To__r.Id == $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged in User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Months_Deferred__c</fullName>
        <label>Months Deferred</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_Team_Owned__c</fullName>
        <formula>Owner:User.Manager.Id = $User.Id 
|| 
OwnerId = $User.Id 
|| 
Owner:User.Manager.ManagerId = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Team Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Payment_Due_Date__c</fullName>
        <label>Next Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Note_Date__c</fullName>
        <inlineHelpText>Populate with Disbursement Note Date, if it exists</inlineHelpText>
        <label>Note Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Obligated_Date__c</fullName>
        <label>Obligated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Assistance_ReRun_Results__c</fullName>
        <label>FEMA DOB ReRun Results</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error on ReRun of Interface</fullName>
                </value>
                <value>
                    <fullName>Issues Found</fullName>
                </value>
                <value>
                    <fullName>Ready for disbursement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phys_Unsecured_Limit__c</fullName>
        <inlineHelpText>Populate with Physical Unsecure Limit (Number)</inlineHelpText>
        <label>Phys Unsecured Limit</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proceed_To__c</fullName>
        <description>Loan Officer sets this to an appropriate value to kick off the automated actions.</description>
        <inlineHelpText>All documents received, proceed to &apos;Closing&apos;</inlineHelpText>
        <label>Proceed To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_Capacity__c</fullName>
        <label>Production Capacity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Run_Disbursement_Interface__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Disbursement Interface</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBA_Loan_History_ReRun_Results__c</fullName>
        <label>SBA Loan History ReRun Results</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error on ReRun of Interface</fullName>
                </value>
                <value>
                    <fullName>Issues Found</fullName>
                </value>
                <value>
                    <fullName>Ready for disbursement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secure__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Loan Secure Flag</inlineHelpText>
        <label>Secure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Servicing_Office__c</fullName>
        <label>Servicing Office</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Awaiting Interface Data</fullName>
                </value>
                <value>
                    <fullName>Closing Docs - Review Completed</fullName>
                </value>
                <value>
                    <fullName>Closing Docs - Under Review</fullName>
                </value>
                <value>
                    <fullName>Closing Docs - Verification</fullName>
                </value>
                <value>
                    <fullName>Commitment-Complete</fullName>
                </value>
                <value>
                    <fullName>Commitment Item Required</fullName>
                </value>
                <value>
                    <fullName>Error on Rerun of interface</fullName>
                </value>
                <value>
                    <fullName>Issues Found</fullName>
                </value>
                <value>
                    <fullName>Obligation-Successful</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Ready for Disbursement</fullName>
                </value>
                <value>
                    <fullName>Reassign</fullName>
                </value>
                <value>
                    <fullName>Initiated Loan Modification</fullName>
                </value>
                <value>
                    <fullName>Initiate Disbursement</fullName>
                </value>
                <value>
                    <fullName>Communicate Conditional Approval to Applicant</fullName>
                </value>
                <value>
                    <fullName>Commitment Team Review</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Term__c</fullName>
        <inlineHelpText>In Months</inlineHelpText>
        <label>Total Term</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trigger_PB_for_Initiate_Disbursement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger PB for Initiate Disbursement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trigger_PB_for_Loan_Mod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger PB for Loan Mod</label>
        <type>Checkbox</type>
    </fields>
    <label>Loan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Date_Assigned_to_Queue__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Application__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Case_Manager_Queue_Loan</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Case Manager Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Commitment_Team_Manager_Loan</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Application__c</columns>
        <columns>Date_Assigned_to_Queue__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Commitment Team Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Assigned_Loans</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Deadline_Date__c</columns>
        <columns>Date_Assigned_to_Commitment_Team_Member__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Logged_in_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Assigned Loans- Commitment team</label>
    </listViews>
    <listViews>
        <fullName>My_Loans_to_Review</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Loan_Amount__c</columns>
        <columns>Loan_Type__c</columns>
        <columns>Secure__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Loans to Review</label>
        <sharedTo>
            <group>All_Internal_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Senior_Case_Manager_Queue_Loan</fullName>
        <columns>NAME</columns>
        <columns>Borrower_Name__c</columns>
        <columns>Application__c</columns>
        <columns>Date_assigned_to_Case_Manager_Queue__c</columns>
        <columns>Companion__c</columns>
        <columns>Loan_Amount__c</columns>
        <columns>Loan_Type__c</columns>
        <columns>Secure__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Legal Manager Queue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Senor_Case_Manager_Queue_Loan</fullName>
        <filterScope>Queue</filterScope>
        <label>Senior Case Manager Queue</label>
        <queue>Senor_Case_Manager_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Loan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Restrict_Comtt_Member_to_change_owner</fullName>
        <active>true</active>
        <errorConditionFormula>$UserRole.Name=&apos;Commitment Team&apos; 
&amp;&amp; ( ISCHANGED( OwnerId ) || ISCHANGED( Assigned_To__c ))</errorConditionFormula>
        <errorMessage>You do not have permissions to change the Ownership or Assigned To fields</errorMessage>
    </validationRules>
</CustomObject>